<resources>
    <string name="restriccion_solo_alfanumerico">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZÑ abcdefghijklmnopqrstuvwxyzñ</string>
    <string name="restriccion_solo_alfabeto">ABCDEFGHIJKLMNOPQRSTUVWXYZÑ abcdefghijklmnopqrstuvwxyzñ</string>
    <string name="app_name">JuntasAccionComunal</string>
    <string name="junta_accion_comunal">Juntas Accion Comunal</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="volver">Volver</string>
    <string name="surgio_un_problema">Surgio un problema intentelo mas tarde.</string>
    <string name="no_ha_ingresado_un_correo_electronico_valido">No ha ingresado un correo electronico valido. Vuelvelo a intentar</string>
    <string name="error_app">Sugio un problema</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="el_campo_del_correo_vacio">El campo del correo esta vacio.</string>
    <string name="el_campo_contrasenia_vacio">El campo contraseña esta vacio. Vuelvelo a intentar</string>
    <string name="la_contrasenia_es_invalida">La contrasenia es invalida. Debe cumplir con las siguientes caracteristicas:\n\t1. Tener mas 5 o mas caracteres.\n\t2. Tener 20 o menos caracteres</string>
    <string name="usuario_no_registrado">El usuario no se encuentra. Revisa tus credenciales</string>
    <string name="nombre_jac">Nombre Junta accion comuna</string>
    <string name="codigo_jac">Codigo junta accion comunal</string>
    <string name="el_nombre_jac_invalido">El nombre de la Junta de accion comunal no es valido.\n debe cumplir con los siguientes requisitos:\n\n\t1. Tener 5 o mas caracteres.\n\t</string>
    <string name="registro_jac">Registro Junta accion comunal</string>
    <string name="el_codigo_jac_invalido">El codigo de la Junta de accion comunal no es valido.\nDebe tener minimo 5 caracteres</string>
    <string name="el_campo_repetir_contrasenia_esta_vacio">El campo repetir contraseña esta vacio.Vuelvelo a intentar.</string>
    <string name="repetir_contrasenia_no_es_valido">El campo repetir contraseña no es valido.\nDebe cumplir con los siguientes requisitos:\n\t1. Tener 5 o mas caracteres.\n\t2. Tener 20 o menos caracteres</string>
    <string name="los_campos_contrasenia_repetir_contrasenia_no_coinciden">Los campos contraseña y repetir contraseña no coinciden. Vuelverlo a intentar.</string>
    <string name="jac_ya_registrada">Esta JAC ya esta registrada.\n Reintenta iniciar sesion.</string>
    <string name="registro_exitoso_jac">Se ha hecho el registro exitos de la JAC. Se validara la informacion para la activacion en la plataforma.</string>
    <string name="usuario_o_contrasenia_equivocado">El usuario o la contraseña son incorrectos vuelve a intentarlo</string>
    <string name="registrar_afiliado">Registrar afiliado</string>
    <string name="registrar_jac">Registrar JAC</string>
    <string name="registrarse_afiliado">Registrarse como afiliado</string>
    <string name="ingresa_nombre_jac">Ingresa el nombre de la Jac</string>
    <string name="ingresar_nombre_afiliado">Ingresar Nombres</string>
    <string name="ingresar_apellido_afiliado">Ingresar Apellidos</string>
    <string name="tipo_documento">Tipo documento</string>
    <string name="numero_documento">Numero Documento</string>
    <string name="direccion">Direccion</string>
    <string name="tipo_telefono">Tipo telefono</string>
    <string name="telefono">Telefono</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="registro_civil">Registro civil</string>
    <string name="tarjeta_identidad">Tarjeta identidad</string>
    <string name="cedula_ciudadania">Cedula ciudadania</string>
    <string name="cedula_extranjeria">Cedula extranjeria</string>
    <string name="telefono_fijo">Telefono fijo</string>
    <string name="telefono_movil">Telefono movil</string>
    <string name="no_ingreso_jac_existente">No selecciono una JAC registrada en nuestro sistema. Intentelo nuevamente</string>
    <string name="registro_afiliado_jac">Registro afiliado JAC</string>
    <string name="no_ha_ingresado_nombre">El campo nombre esta vacio. intentalo nuevamente </string>
    <string name="el_nombre_afiliado_invalido">El nombre del afiliado no es valido. Intentelo de nuevo.</string>
    <string name="no_ha_ingresado_apellidos">No ha ingresado un apellido. Intentelo nuevamente.</string>
    <string name="apellido_invalido">El apellido no es valido. Intentelo nuevamente.</string>
    <string name="no_ha_ingresado_una_fecha_nacimiento">No ha ingresado una fecha de nacimiento. Intentelo nuevamente.</string>
    <string name="no_cumple_edad_minima_afiliacion">La fecha ingresada no cumple con la edad minima de afiliacion.</string>
    <string name="hint_seleccion_fecha">Año / Mes / Dia</string>
    <string name="no_ha_seleccionado_un_tipo_documento">No ha seleccionado un tipo de documento. Vuelvelo a intentar</string>
    <string name="no_ha_ingresado_numero_documento">No ha ingresado un numero de documento. Vuelvelo a intentar.</string>
    <string name="numero_documento_invalido">El numero de documento es invalido. Vuelvelo a intentar</string>
    <string name="no_ha_ingresado_una_direccion">No ha ingresado una direccion. Vuelvelo a intentar</string>
    <string name="no_ingreso_una_direccion_correcta">No ha ingresado una direccion valida. Intentelo nuevamente</string>
    <string name="no_ha_seleccionado_un_tipo_de_telefono">No ha seleccionado un tipo de telefono. Vuelvelo a intentar.</string>
    <string name="campo_telefono_vacio">No ha ingresado un telefono. Intentelo nuevamente</string>
    <string name="el_telefono_no_es_valido">El numero de telefono no es valido. Vuelvelo a intentar</string>
    <string name="afiliado_registrado_en_la_junta">Este afiliado ya se encuentra registrado en la junta. Habla con el/la secretario/a para mas informacion.</string>
    <string name="registro_afiliado_exitoso">El registro del afiliado a la jac a sido exitoso.</string>
    <string name="deseas_continuar_con_el_registro">Deseas continuar con el registro del afiliacion?</string>
    <string name="que_deseas_hacer">¿Que deseas hacer?</string>
    <string name="asignar_rol_dentro_directiva">Asignar rol dentro de la directiva</string>
    <string name="panel_control">Panel control</string>
    <string name="lista_afiliados_modificacion_directivas">Lista afiliados disponibles modificacion directivas</string>
    <string name="administracion">Administracion</string>
    <string name="jac">JAC</string>
    <string name="presidente">Presidente</string>
    <string name="vicepresidente">Vicepresidente</string>
    <string name="secretario">Secretario</string>
    <string name="fiscal">Fiscal</string>
    <string name="tesorero">Tesorero</string>
    <string name="afiliado">Afiliado</string>
    <string name="pre_afiliado">Pre-afiliado</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="desafiliado">Desafiliado</string>
    <string name="expulsado">Expulsado</string>
    <string name="fallecido">Fallecido</string>
    <string name="configuracion_afiliado_en_directiva">Configurar afiliado en directiva</string>
    <string name="estado_actual_afiliacion">Estado actual afiliacion</string>
    <string name="rol_actual_en_directiva">Rol Actual en directiva</string>
    <string name="actualizar_rol_estado_app">Actualizar rol y estado afiliacion en app</string>
    <string name="actualizar_rol_en_directiva">Actualizar rol en directiva</string>
    <string name="deseas_continuar_con_la_actualizacion_del_afiliado">¿Deseas continuar con la actualizacion del afiliado?</string>
    <string name="actualizacion_afiliado_exitosa">Actualizacion del afiliado ha sido exitoso</string>
    <string name="actualizar">Actualizar</string>
    <string name="comite_trabajo">Comite trabajo</string>
    <string name="comite_salud">Comite salud</string>
    <string name="comite_deportes">Comite deportes</string>
    <string name="comite_ambiente">Comite ambiente</string>
    <string name="formulario_registro_afiliado">Formulario registro/actualizacion afiliado</string>
    <string name="contacto_afiliado">Contacto</string>
    <string name="seguridad_afiliado">Seguridad afiliado</string>
    <string name="informacion_basica_afiliado">Informacion basica afiliados</string>
    <string name="detalle_en_jac">Detalle en JAC</string>
    <string name="comite">Comite</string>
    <string name="datos_afiliado">Datos afiliado</string>
    <string name="siguiente">Siguiente</string>
    <string name="finalizar_registro_afiliado">Finalizar registro Afiliado</string>
    <string name="fecha_nacimiento_invalido">Fecha de nacimiento invalido. Vuelvelo a intentar</string>
    <string name="no_ha_ingresado_tipo_documento">No ha ingresado un tipo de documento</string>
    <string name="el_campo_del_comite_no_seleccionado">No ha seleccionado un comite para la junta</string>
    <string name="no_ha_seleccionado_un_comite">No ha seleccionado un comite de participacion de la junta.</string>
    <string name="no_ha_seleccionado_un_estado_afiliacion">No ha seleccionado un estado de afiliacion.</string>
    <string name="agendar_reunion">Agendar reunion</string>
    <string name="asamblea_informativa">Asamblea informativa</string>
    <string name="asamblea_decisoria">Asamblea decisoria</string>
    <string name="reunion_directiva_informativa">Reunion directiva informativa</string>
    <string name="reunion_directiva_decisoria">Reunion directiva decisoria</string>
    <string name="agendar_reunion_asamblea">Agendar reunion/asamblea</string>
    <string name="asunto">Asunto</string>
    <string name="fecha_reunion_asamblea">Fecha reunion asamblea</string>
    <string name="hora_reunion">Hora de reunion</string>
    <string name="adicionar_punto_reunion_asamblea">Adicionar punto de la reunion/asamblea:</string>
    <string name="ingresar_punto_reunion">Ingresar punto reunion</string>
    <string name="guardar">Guardar</string>
    <string name="surgio_un_problema_al_momento_de_agendar_reunion">Surgio un problema al momento de agendar la reunion. Intentalo denuevo</string>
    <string name="asunto_reunionasamblea_vacio">No ha ingresado el asunto de la reunion/asamblea. Intentelo mas tarde.</string>
    <string name="asunto_reunionasamblea_invalido">Asunto reunion es invalido. Intentelo de nuevo.</string>
    <string name="no_ha_seleccionado_tipo_reunion">No ha seleccionado un tipo de reunion. Intentelo de nuevo.</string>
    <string name="no_ha_seleccionado_fecha_reunion">No ha seleccionado la fecha de la reunion.</string>
    <string name="no_ha_seleccionado_hora_reunion">No ha seleccionado la hora de la reunion. Intentelo de nuevo.</string>
    <string name="no_ha_ingresado_numero_minimo_de_puntos">No ha ingresado el numero minimo de puntos de la reunion. Intentelo de nuevo.</string>
    <string name="se_agendo_exitosamente_la_reunion">Se agendo exitosamente la reunion/asamblea.</string>
    <string name="crear_acta_reunion">Crear acta de la reunion</string>
    <string name="hint_hora">HH:mm</string>
    <string name="tipo_reunion">Tipo reunion</string>
    <string name="reuniones_sin_actas">La siguiente lista de reuniones no ha generado las actas asociadas a estas. Da click en una para empezar el proceso de creacion de actas</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_finalizacion">Hora finalizacion</string>
    <string name="complementar_informacion_acta">Completar informacion acta</string>
    <string name="puntos_reunion">Puntos reunion</string>
    <string name="asistencia_reunion">Asistencia reunion</string>
    <string name="numero_acta">Numero acta</string>
</resources>