<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_registroAfiliados_volver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textView_titulo_registro_afiliado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension16dp"
                android:text="@string/registrar_afiliado"
                android:textAlignment="center"
                android:textSize="@dimen/texto18sp" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_jacs_disponibles"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/dimension16dp"
                android:digits="@string/restriccion_solo_alfanumerico"
                android:hint="@string/ingresa_nombre_jac"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_nombreAfiliado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_registro_nombreAfiliado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/restriccion_solo_alfabeto"
                    android:hint="@string/ingresar_nombre_afiliado"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextInput_registro_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/restriccion_solo_alfabeto"
                    android:hint="@string/ingresar_apellido_afiliado"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_registroFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/fecha_nacimiento" />

            <TextView
                android:id="@+id/textView_registroAfiliados_SeleccionarFecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:gravity="center"
                android:text="@string/hint_seleccion_fecha" />

            <TextView
                android:id="@+id/textView_tipoDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_documento"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_registro_tipos_documeto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:layout="@android:layout/simple_spinner_dropdown_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textIputLayout_registro_numeroDocumeto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_registro_numeroDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/restriccion_solo_alfanumerico"
                    android:hint="@string/numero_documento" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electronico"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_tipoTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_telefono"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_registro_tipoTelefono"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="number|phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_registro_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_repetirContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_repetir_contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repetir_contrasenia"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_registrarAfiliado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar_afiliado"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>