<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_detallereunion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimension16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView_crearActa_asunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asunto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_crearActa_detalleasunto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/asunto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_crearActa_asunto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_listaCreacionActa_fechaConvocatoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_reunion_asamblea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_asunto" />

        <TextView
            android:id="@+id/textView_crearActa_detallefechaconvocatoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/hint_seleccion_fecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_listaCreacionActa_fechaConvocatoria"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_detalleasunto" />

        <TextView
            android:id="@+id/textView_crearActa_horaConvocatoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_reunion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_listaCreacionActa_fechaConvocatoria" />

        <TextView
            android:id="@+id/textView_crearActa_detalleHoraConvocatoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/hint_hora"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_crearActa_horaConvocatoria"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_detallefechaconvocatoria" />

        <TextView
            android:id="@+id/textView_crearActa_tipoReunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_reunion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_horaConvocatoria" />

        <TextView
            android:id="@+id/textView_crearActa_detalleTipoReunion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reunion_directiva_informativa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_crearActa_tipoReunion"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_detalleHoraConvocatoria" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_crearActa_detalleHoras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_tituloFormulario">

        <TextView
            android:id="@+id/textView_crearActa_horaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_inicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_crearActa_detalleHoraInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableRight="@android:drawable/ic_lock_idle_alarm"
            android:text="@string/hint_hora"
            app:layout_constraintStart_toEndOf="@+id/textView_crearActa_horaInicio"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_crearActa_horaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hora_finalizacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_horaInicio" />

        <TextView
            android:id="@+id/textView_crearActa_detalleHoraFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableRight="@android:drawable/ic_lock_idle_alarm"
            android:text="@string/hint_hora"
            app:layout_constraintStart_toEndOf="@+id/textView_crearActa_horaFin"
            app:layout_constraintTop_toBottomOf="@+id/textView_crearActa_detalleHoraInicio" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_crearActa_tituloFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/complementar_informacion_acta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_detallereunion" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_formularios_finalizacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_crearActa_detalleHoras">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntos_reunion" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asistencia_reunion" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollview_crearActa_paginas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_formularios_finalizacion">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="500dp"
            >

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2_formularios_acta"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/button_crearActa_ejecutarCreacionActa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager2.widget.ViewPager2>

            <Button
                android:id="@+id/button_crearActa_ejecutarCreacionActa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/crear_acta_reunion"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>