<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_complementoActa_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/complementar_informacion_acta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_complementoActa_horaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/hora_inicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_complementoActa_titulo" />

    <TextView
        android:id="@+id/textView_complementoActa_detalleHoraInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawableRight="@android:drawable/ic_lock_idle_alarm"
        android:drawablePadding="5dp"
        android:text="@string/hint_hora"
        app:layout_constraintBottom_toBottomOf="@+id/textView_complementoActa_horaInicio"
        app:layout_constraintStart_toEndOf="@+id/textView_complementoActa_horaInicio"
        app:layout_constraintTop_toTopOf="@+id/textView_complementoActa_horaInicio" />

    <TextView
        android:id="@+id/textView_complementoActa_horaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hora_finalizacion"
        app:layout_constraintStart_toStartOf="@+id/textView_complementoActa_horaInicio"
        app:layout_constraintTop_toBottomOf="@+id/textView_complementoActa_horaInicio" />

    <TextView
        android:id="@+id/textView_complementoActa_detalleHoraFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawableRight="@android:drawable/ic_lock_idle_alarm"
        android:drawablePadding="5dp"
        android:text="@string/hint_hora"
        app:layout_constraintBottom_toBottomOf="@+id/textView_complementoActa_horaFinal"
        app:layout_constraintStart_toEndOf="@+id/textView_complementoActa_horaFinal"
        app:layout_constraintTop_toTopOf="@+id/textView_complementoActa_horaFinal" />

    <TextView
        android:id="@+id/textView_completoActa_numeroActa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_acta"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_numeroActa"
        app:layout_constraintStart_toStartOf="@+id/textView_complementoActa_horaFinal"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_numeroActa" />

    <EditText
        android:id="@+id/editTextNumber_numeroActa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_completoActa_numeroActa"
        app:layout_constraintTop_toBottomOf="@+id/textView_complementoActa_horaFinal" />
</androidx.constraintlayout.widget.ConstraintLayout>